WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177968
RenderListItem should not hold raw pointers to RenderListMarker.
https://bugs.webkit.org/show_bug.cgi?id=177968
Summary
RenderListItem should not hold raw pointers to RenderListMarker.
alan
Reported
2017-10-05 14:22:32 PDT
there's a better way.
Attachments
Patch
(6.95 KB, patch)
2017-10-05 14:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.01 KB, patch)
2017-10-05 15:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-05 14:23:01 PDT
<
rdar://problem/34842943
>
alan
Comment 2
2017-10-05 14:25:18 PDT
Created
attachment 322917
[details]
Patch
Antti Koivisto
Comment 3
2017-10-05 14:57:07 PDT
Comment on
attachment 322917
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=322917&action=review
> Source/WebCore/rendering/RenderListItem.cpp:332 > + RenderBox* renderBox = m_marker.get();
Would this have a more descriptive name? 'markerAncestor' or something?
alan
Comment 4
2017-10-05 15:05:51 PDT
Created
attachment 322922
[details]
Patch
WebKit Commit Bot
Comment 5
2017-10-05 15:40:09 PDT
Comment on
attachment 322922
[details]
Patch Clearing flags on attachment: 322922 Committed
r222936
: <
http://trac.webkit.org/changeset/222936
>
WebKit Commit Bot
Comment 6
2017-10-05 15:40:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug