RenderListItem should not hold raw pointers to RenderListMarker. https://bugs.webkit.org/show_bug.cgi?id=177968 <rdar://problem/34842943>

Reviewed by Antti Koivisto.

Now we don't need to unregister the marker from the list item explicitly.

Covered by existing tests.

* rendering/RenderListItem.cpp:
(WebCore::RenderListItem::RenderListItem):
(WebCore::RenderListItem::willBeDestroyed):
(WebCore::RenderListItem::positionListMarker):
* rendering/RenderListItem.h:
* rendering/RenderListMarker.cpp:
(WebCore::RenderListMarker::willBeDestroyed):
* style/RenderTreeUpdaterListItem.cpp:
(WebCore::RenderTreeUpdater::ListItem::updateMarker):


Canonical link: https://commits.webkit.org/194209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222936 268f45cc-cd09-0410-ab3c-d52691b4dbfc